--- a/themes/postowl-theme/layouts/index.html
+++ b/themes/postowl-theme/layouts/index.html
@@ -30,42 +30,49 @@
     </div>
   </section>  
   <section class="section section-md section-features">
+      <div class="row justify-content-center">
+    <div class="col-lg-12 text-center">
+      <a class="btn btn-primary btn-cta rounded-pill btn-lg mb-2" href="/docs/administration-guide/deployment/" role="button">Deploy your own PostOwl</a>
+    </div>
+  </div>
     <div class="container">
       <div class="row justify-content-center text-center">
         <div class="col-lg-5">
-          <h2 class="h4">Open Source</h2>
-          <p>Self-host for free and own your own data. (Hosted option coming soon!)</p>
+          <h2 class="h4">The story of your life</h2>
+          <p>All your writing in one place: <strong>public posts</strong> like a normal blog, <strong>shared letters</strong> that only friends can see and a <strong>private journal</strong> just for you.</p>
+        </div>
+        <div class="col-lg-5">
+          <h2 class="h4">Your own website</h2>
+          <p>PostOwl is <strong>Open-source</strong>. Self host for free. <strong>Hosted version coming soon</strong>, <a href="/newsletter">sign up for the Newsletter</a> to hear when it's ready.</p>
+        </div>
+        <div class="col-lg-5">
+          <h2 class="h4">No admin panel</h2>
+          <p><strong>Edit in-place</strong>. When you've experienced how fast and easy it is, there's no going back to bloated CMS's or static site generators with build steps.</p>
+        </div>
+      </div>
+      <div class="row justify-content-center text-center">
+        <div class="col-lg-5">
+          <h2 class="h4">For the long term</h2>
+          <p>All your content is in a single SQLite database. Easy to backup and readable long into the future.</p>
         </div>
         <div class="col-lg-5">
           <h2 class="h4">Fast and efficient ⚡️</h2>
           <p>We use SvelteKit and SQLite for near instant page loads. You can host with 'scale to zero' to save electricity when your site is quiet.</p>
         </div>
         <div class="col-lg-5">
-          <h2 class="h4">Inline editing</h2>
-          <p>No clunky admin interface! Sign in and edit your content on the page. The simplest web editing you've ever used.</p>
-        </div>
-      </div>
-      <div class="row justify-content-center text-center">
-        <div class="col-lg-5">
-          <h2 class="h4">Three types of posts</h2>
-          <p>Create public posts like a normal blog, shared letters that only friends can see with a secret link and a private journal just for you. All in one app!</p>
-        </div>
-        <div class="col-lg-5">
-          <h2 class="h4">For the long term</h2>
-          <p>All your content is in a single SQLite database. This is easy to backup and will be readable long into the future. Read more about why PostOwl can be inter-generational...</p>
-        </div>
-        <div class="col-lg-5">
           <h2 class="h4">And more...</h2>
-          <p>RSS feeds, search, XXX.</p>
+          <p>RSS Feeds, Search, Email notifications. More features to come. Have an idea? Join the <a href="https://github.com/PostOwl/postowl/discussions">discussion</a>.</p>
         </div>
       </div>
   </section>
 
   <section class="section section-md section-features">
-  <div class="row justify-content-center">
-    <div class="col-lg-12 text-center">
-      <a class="btn btn-primary btn-cta rounded-pill btn-lg mb-2" href="/docs/{{ if site.Data.doks.docsVersioning }}{{ site.Data.doks.docsVersion }}/{{ end }}start-here/getting-started/" role="button">{{ i18n "get-started" }}</a>
-      <p class="meta">Open-source <a href="https://www.gnu.org/licenses/agpl-3.0.en.html">AGPLv3</a> Licensed. <a href="https://github.com/PostOwl/postowl/releases">GitHub v{{ $data := getJSON "/package.json" }}{{ $data.version }}</a></p>
+
+    <div class="mx-auto col-12 col-md-10 col-lg-8">
+      <h2>Email newsletter</h2>
+      <p>Keep up-to-date with PostOwl news and <strong>hear when we launch the hosted version</strong>.</p>
+      <script async data-uid="c3d214ae19" src="https://postowl.ck.page/c3d214ae19/index.js"></script>
+      <p class="meta">(We'll only email you about PostOwl occasionally. You can unsubscribe at any time.)</p>
     </div>
 </section>
 
