--- a/themes/postowl-theme/layouts/index.html
+++ b/themes/postowl-theme/layouts/index.html
@@ -71,7 +71,16 @@
     <div class="mx-auto col-12 col-md-10 col-lg-8">
       <h2>Email newsletter</h2>
       <p>Keep up-to-date with PostOwl news and <strong>hear when we launch the hosted version</strong>.</p>
-      <script async data-uid="c3d214ae19" src="https://postowl.ck.page/c3d214ae19/index.js"></script>
+      <form
+        action="https://buttondown.email/api/emails/embed-subscribe/postowl"
+        method="post"
+        target="popupwindow"
+        onsubmit="window.open('https://buttondown.email/postowl', 'popupwindow')"
+        class="embeddable-buttondown-form">
+        <label for="bd-email">Enter your email</label>
+        <input type="email" name="email" id="bd-email" />
+        <input class="btn btn-primary btn-cta rounded-pill mb-2" type="submit" value="Subscribe" />
+      </form>
       <p class="meta">(We'll only email you about PostOwl occasionally. You can unsubscribe at any time.)</p>
     </div>
 </section>
@@ -84,7 +93,7 @@
 <section class="section section-md container-fluid bg-light">
   <div class="row justify-content-center text-center">
     <div class="col-lg-7">
-      <h2 class="mt-2">Start building with Doks today</h2>
+      <h2 class="mt-2">Start writing with PostOwl today</h2>
       <a class="btn btn-primary rounded-pill px-4 my-2" href="/docs/{{ if site.Data.doks.docsVersioning }}{{ site.Data.doks.docsVersion }}/{{ end }}prologue/introduction/" role="button">{{ i18n "get-started" }}</a>
     </div>
   </div>
