--- a/themes/postowl-theme/layouts/index.html
+++ b/themes/postowl-theme/layouts/index.html
@@ -34,6 +34,9 @@
     <div class="col-lg-12 text-center">
       <a class="btn btn-primary btn-cta rounded-pill btn-lg mb-2" href="/docs/administration-guide/deploy/" role="button">Deploy your own PostOwl</a>
     </div>
+    <div class="col-lg-12 text-center pt-3">
+      <a href="https://postowldemo.fly.dev/">View a demo PostOwl website</a>
+    </div>
   </div>
     <div class="container">
       <div class="row justify-content-center text-center">
