newsletter form on home for mobile

--- a/themes/postowl-theme/layouts/index.html
+++ b/themes/postowl-theme/layouts/index.html
@@ -70,8 +70,8 @@
   </section>
 
   <section class="section section-md section-features">
-
-    <div class="mx-auto col-12 col-md-10 col-lg-8">
+    <div class="row justify-content-center">
+    <div class="mx-auto col-10 col-md-8 col-lg-6">
       <h2>Email newsletter</h2>
       <p>Keep up-to-date with PostOwl news and <strong>hear when we launch the hosted version</strong>.</p>
       <form method="post" action="https://newsletter.postowl.com/subscription/form" class="listmonk-form">
@@ -92,6 +92,7 @@
         <button type="submit" class="btn btn-primary btn-cta rounded-pill btn-lg mb-2">Subscribe</button>
       </form>
     </div>
+  </div>
 </section>
 
   {{ end }}
