--- a/themes/postowl-theme/layouts/index.html
+++ b/themes/postowl-theme/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<section class="section container-fluid mt-n3 pb-3">
+<section class="section container-lg mt-n3 pb-3">
   <div class="row justify-content-center">
     <div class="col-lg-12 text-center">
       <h1>{{ .Title }}</h1>
@@ -21,16 +21,13 @@
     <div class="bg-dots"></div>
   </div>
   {{ end -}}
-  {{ if eq $.Site.Language.LanguageName "English" }}
-  <section class="section section-md section-features">
-    <div class="container">
+  <section class="section container-lg section-md section-features">
       <div class="ratio ratio-16x9">
        <iframe src="https://iframe.mediadelivery.net/embed/142677/9ea7ac55-9301-44f0-b80c-ee0177b570d8?autoplay=false&loop=false&muted=false&preload=true" loading="lazy" style="border:none;position:absolute;top:0;height:100%;width:100%;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture;" allowfullscreen="true"></iframe>
-      </div>
     </div>
   </section>  
-  <section class="section section-md section-features">
-      <div class="row justify-content-center">
+  <section class="section container-lg section-md section-features">
+    <div class="row justify-content-center">
     <div class="col-lg-12 text-center">
       <a class="btn btn-primary btn-cta rounded-pill btn-lg mb-2" href="/docs/administration-guide/deploy/" role="button">Deploy your own PostOwl</a>
     </div>
@@ -38,7 +35,6 @@
       <a href="https://postowldemo.fly.dev/">View a demo PostOwl website</a>
     </div>
   </div>
-    <div class="container">
       <div class="row justify-content-center text-center">
         <div class="col-lg-5">
           <h2 class="h4">The story of your life</h2>
@@ -69,9 +65,9 @@
       </div>
   </section>
 
-  <section class="section section-md section-features">
+  <section class="section container-lg section-md section-features">
     <div class="row justify-content-center">
-    <div class="mx-auto col-10 col-md-8 col-lg-6">
+    <div class="mx-auto col-12 col-md-10 col-lg-8">
       <h2>Email newsletter</h2>
       <p>Keep up-to-date with PostOwl news and <strong>hear when we launch the hosted version</strong>.</p>
       <form method="post" action="https://newsletter.postowl.com/subscription/form" class="listmonk-form">
@@ -94,13 +90,11 @@
     </div>
   </div>
 </section>
-
-  {{ end }}
 {{ end }}
 
 {{ define "sidebar-footer" }}
 {{ if site.Data.doks.sectionFooter -}}
-<section class="section section-md container-fluid bg-light">
+<section class="section section-md container-lg bg-light">
   <div class="row justify-content-center text-center">
     <div class="col-lg-7">
       <h2 class="mt-2">Start writing with PostOwl today</h2>
