Fix name in newsletter form

--- a/themes/postowl-theme/layouts/index.html
+++ b/themes/postowl-theme/layouts/index.html
@@ -73,7 +73,7 @@
       <form method="post" action="https://newsletter.postowl.com/subscription/form" class="listmonk-form">
         <div class="mb-3">
           <label for="inputName1" class="form-label">First Name</label>
-          <input type="text" class="form-control" id="inputName1">
+          <input type="text" name="name" class="form-control" id="inputName1">
         </div>
         <div class="mb-3">
           <input type="hidden" name="nonce" />
