--- a/themes/postowl-theme/layouts/index.html
+++ b/themes/postowl-theme/layouts/index.html
@@ -32,7 +32,7 @@
       <a class="btn btn-primary btn-cta rounded-pill btn-lg mb-2" href="/docs/administration-guide/deploy/" role="button">Deploy your own PostOwl</a>
     </div>
     <div class="col-lg-12 text-center pt-3">
-      <a href="https://postowldemo.fly.dev/">View a demo PostOwl website</a>
+      <a href="https://demo.postowl.website">View a demo PostOwl website</a>
     </div>
   </div>
       <div class="row justify-content-center text-center">
@@ -104,4 +104,3 @@
 </section>
 {{ end -}}
 {{ end }}
-
