Change umami script name

--- a/themes/postowl-theme/layouts/partials/footer/script-footer-custom.html
+++ b/themes/postowl-theme/layouts/partials/footer/script-footer-custom.html
@@ -7,7 +7,7 @@
 */}}
 
 {{ if eq (hugo.Environment) "production" -}}
-  <script async src="https://bustle.postowl.com/postowlum.js" data-website-id="a9e4146a-5bf0-46e7-849e-1bb8b092ec3a"></script>
+  <script async src="https://bustle.postowl.com/um.js" data-website-id="a9e4146a-5bf0-46e7-849e-1bb8b092ec3a"></script>
 {{ end -}}
 
 {{/* EXAMPLE - only load script for a page type e.g. contact or gallery
